--- a/index.html
+++ b/index.html
@@ -9,8 +9,116 @@
 </head>
 
 <body>
-
-
+    <!--Strategy-->
+<!--Create 5 main components: header, info, quote, action, footer-->
+<!--Code the html then style each component-->
 </body>
+<!--Header-->
+<div class="header-container">
+    <div class="header-top"> 
+        <div class="header-logo">
+            Header Logo
+        </div>
+        <div class="header-links">
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+                </a></li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="header-bottom">
+        <div class="header-text-button-container">
+                <div class="header-title">
+                    This website is awesome
+                </div>
+                <div class="header-text">
+                    This website has some subtext that goes here 
+                    under the main title. It's a smaller font and 
+                    the colour is lower contrast.                    
+                </div>
+                <div class="header-button">
+                    <button>Sign up</button>
+                </div>
+        </div>
+
+        <div class="image">
+            <img src="" alt="this is a placeholder for an image">
+        </div>
+    </div>
+
+</div>
+
+<!--Info Container-->
+<div class="info-container">
+    <div class="info-title">
+        Some random information
+    </div>
+    <div class="image1-text-container">
+        <img src="" alt="image1">
+        <div class="text1">
+            this is some subtext under and illustration
+            or image
+        </div>
+    </div>
+    <div class="image2-text-container">
+        <img src="" alt="image2">
+        <div class="text2">
+            this is some subtext under and illustration
+            or image
+        </div>
+    </div>
+    <div class="image3-text-container">
+        <img src="" alt="image3">
+        <div class="text3">
+            this is some subtext under and illustration
+            or image
+        </div>
+    </div>
+    <div class="image4-text-container">
+        <img src="" alt="image4">
+        <div class="text4">
+            this is some subtext under and illustration
+            or image
+        </div>
+    </div>
+</div>
+
+<!--Quote Container-->
+<div class="quote-container">
+    <div class="quote">
+        This is an inspiring quote, or a testimonial from 
+        a customer.  Maybe it's just filling up space, or 
+        maybe people will actually read it.  Who knows? 
+        All I know is that it looks nice.
+    </div>
+    <div class="source">
+        -Thor, God of Thunder
+    </div>
+</div>
+
+<!--Action Container-->
+<div class="action-container">
+    <div class="action-text-button">
+        <div class="action-title-text-container">
+            <div class="action-title">
+                Call to action! It's time!
+            </div>
+            <div class="action-text">
+                Sign up for our product by clicking that button 
+                right over there!
+            </div>
+        </div>
+        <div class="action-button">
+            <button>Sign up</button>
+        </div>        
+    </div>
+</div>
+
+<!--Footer Container-->
+<div class="footer">
+    Copyright &copy The Odin Project 2021
+</div>
 </html>
